--- a/Tenant Onboarding Solution/Src/Employee Details Screen.fx.yaml
+++ b/Tenant Onboarding Solution/Src/Employee Details Screen.fx.yaml
@@ -214,16 +214,29 @@
                                 Width: =Parent.Width
                                 ZIndex: =7
 
-                        Container59_13 As groupContainer.manualLayoutContainer:
+                        Container59_15 As groupContainer.manualLayoutContainer:
                             AlignInContainer: =AlignInContainer.Center
                             FillPortions: =0
                             Height: =Parent.Height
                             LayoutMinHeight: =0
                             LayoutMinWidth: =250
-                            Width: =40
-                            ZIndex: =9
+                            Width: =120
+                            ZIndex: =10
 
-                            Button11_13 As button:
+                            Label16_45 As label:
+                                Align: =Align.Center
+                                BorderColor: =App.Theme.Colors.Darker40
+                                Color: =RGBA(159, 159, 159, 1)
+                                DisabledColor: =RGBA(166, 166, 166, 1)
+                                Font: =App.Theme.Font
+                                FontWeight: =FontWeight.Semibold
+                                Height: =Parent.Height
+                                Size: =9
+                                Text: ="Attendance"
+                                Width: =Parent.Width
+                                ZIndex: =5
+
+                            Button11_15 As button:
                                 BorderColor: =App.Theme.Colors.Primary
                                 BorderStyle: =BorderStyle.None
                                 Color: =RGBA(0, 0, 0, 0)
@@ -246,23 +259,9 @@
                                 RadiusTopRight: =0
                                 Size: =15
                                 Text: =
-                                Tooltip: ="Export Employee Record"
+                                Tooltip: ="Add Employee"
                                 Width: =Parent.Width
-                                ZIndex: =10
-
-                            Image2_5 As image:
-                                BorderColor: =App.Theme.Colors.Darker40
-                                DisabledBorderColor: =RGBA(166, 166, 166, 1)
-                                DisabledFill: =RGBA(244, 244, 244, 1)
-                                Height: =43
-                                Image: ='box-arrow-up-right'
-                                PaddingBottom: =7
-                                PaddingLeft: =7
-                                PaddingRight: =7
-                                PaddingTop: =7
-                                Tooltip: ="Export Employee Record"
-                                Width: =Parent.Width
-                                ZIndex: =11
+                                ZIndex: =7
 
                     Container36_7 As groupContainer.horizontalAutoLayoutContainer:
                         LayoutJustifyContent: =LayoutJustifyContent.SpaceBetween
