--- a/Tenant Onboarding Solution/Src/Screen2.fx.yaml
+++ b/Tenant Onboarding Solution/Src/Screen2.fx.yaml
@@ -115,7 +115,7 @@ Screen2 As screen:
             DataField: ="{Attachments}"
             Default: =ThisItem.Attachments
             DisplayMode: =Parent.DisplayMode
-            DisplayName: =DataSourceInfo([@'Tenant Onboarding List'],DataSourceInfo.DisplayName,'{Attachments}')
+            DisplayName: =DataSourceInfo([@'Tenant Onboarding List'],DataSourceInfo.DisplayName,Attachments)
             Fill: =RGBA(0, 0, 0, 0)
             Height: =50
             Required: =false
@@ -207,10 +207,10 @@ Screen2 As screen:
             DataField: ="NameofProspectiveTenant"
             Default: =ThisItem.'Name of Prospective Tenant'
             DisplayMode: =Parent.DisplayMode
-            DisplayName: =DataSourceInfo([@'Tenant Onboarding List'],DataSourceInfo.DisplayName,'NameofProspectiveTenant')
+            DisplayName: =DataSourceInfo([@'Tenant Onboarding List'],DataSourceInfo.DisplayName,'Name of Prospective Tenant')
             Fill: =RGBA(0, 0, 0, 0)
             Height: =70
-            MaxLength: =DataSourceInfo([@'Tenant Onboarding List'], DataSourceInfo.MaxLength, 'NameofProspectiveTenant')
+            MaxLength: =DataSourceInfo([@'Tenant Onboarding List'], DataSourceInfo.MaxLength, 'Name of Prospective Tenant')
             Required: =false
             Update: =DataCardValue1.Value
             Width: =266
@@ -270,10 +270,10 @@ Screen2 As screen:
             DataField: ="TelephoneNumber"
             Default: =ThisItem.'Telephone Number'
             DisplayMode: =Parent.DisplayMode
-            DisplayName: =DataSourceInfo([@'Tenant Onboarding List'],DataSourceInfo.DisplayName,'TelephoneNumber')
+            DisplayName: =DataSourceInfo([@'Tenant Onboarding List'],DataSourceInfo.DisplayName,'Telephone Number')
             Fill: =RGBA(0, 0, 0, 0)
             Height: =70
-            MaxLength: =DataSourceInfo([@'Tenant Onboarding List'], DataSourceInfo.MaxLength, 'TelephoneNumber')
+            MaxLength: =DataSourceInfo([@'Tenant Onboarding List'], DataSourceInfo.MaxLength, 'Telephone Number')
             Required: =false
             Update: =DataCardValue2.Value
             Width: =266
@@ -333,10 +333,10 @@ Screen2 As screen:
             DataField: ="EmailAddress"
             Default: =ThisItem.'Email Address'
             DisplayMode: =Parent.DisplayMode
-            DisplayName: =DataSourceInfo([@'Tenant Onboarding List'],DataSourceInfo.DisplayName,'EmailAddress')
+            DisplayName: =DataSourceInfo([@'Tenant Onboarding List'],DataSourceInfo.DisplayName,'Email Address')
             Fill: =RGBA(0, 0, 0, 0)
             Height: =70
-            MaxLength: =DataSourceInfo([@'Tenant Onboarding List'], DataSourceInfo.MaxLength, 'EmailAddress')
+            MaxLength: =DataSourceInfo([@'Tenant Onboarding List'], DataSourceInfo.MaxLength, 'Email Address')
             Required: =false
             Update: =DataCardValue3.Value
             Width: =266
@@ -396,7 +396,7 @@ Screen2 As screen:
             DataField: ="DateofBirth"
             Default: =ThisItem.'Date of Birth'
             DisplayMode: =Parent.DisplayMode
-            DisplayName: =DataSourceInfo([@'Tenant Onboarding List'],DataSourceInfo.DisplayName,'DateofBirth')
+            DisplayName: =DataSourceInfo([@'Tenant Onboarding List'],DataSourceInfo.DisplayName,'Date of Birth')
             Fill: =RGBA(0, 0, 0, 0)
             Height: =70
             Required: =false
@@ -459,10 +459,10 @@ Screen2 As screen:
             DataField: ="Occupation"
             Default: =ThisItem.Occupation
             DisplayMode: =Parent.DisplayMode
-            DisplayName: =DataSourceInfo([@'Tenant Onboarding List'],DataSourceInfo.DisplayName,'Occupation')
+            DisplayName: =DataSourceInfo([@'Tenant Onboarding List'],DataSourceInfo.DisplayName,Occupation)
             Fill: =RGBA(0, 0, 0, 0)
             Height: =70
-            MaxLength: =DataSourceInfo([@'Tenant Onboarding List'], DataSourceInfo.MaxLength, 'Occupation')
+            MaxLength: =DataSourceInfo([@'Tenant Onboarding List'], DataSourceInfo.MaxLength, Occupation)
             Required: =false
             Update: =DataCardValue5.Value
             Width: =266
@@ -522,10 +522,10 @@ Screen2 As screen:
             DataField: ="CurrentResidentialAddress"
             Default: =ThisItem.'Current Residential Address'
             DisplayMode: =Parent.DisplayMode
-            DisplayName: =DataSourceInfo([@'Tenant Onboarding List'],DataSourceInfo.DisplayName,'CurrentResidentialAddress')
+            DisplayName: =DataSourceInfo([@'Tenant Onboarding List'],DataSourceInfo.DisplayName,'Current Residential Address')
             Fill: =RGBA(0, 0, 0, 0)
             Height: =70
-            MaxLength: =DataSourceInfo([@'Tenant Onboarding List'], DataSourceInfo.MaxLength, 'CurrentResidentialAddress')
+            MaxLength: =DataSourceInfo([@'Tenant Onboarding List'], DataSourceInfo.MaxLength, 'Current Residential Address')
             Required: =false
             Update: =DataCardValue6.Value
             Width: =266
@@ -585,10 +585,10 @@ Screen2 As screen:
             DataField: ="MaritalStatus"
             Default: =ThisItem.'Marital Status'
             DisplayMode: =Parent.DisplayMode
-            DisplayName: =DataSourceInfo([@'Tenant Onboarding List'],DataSourceInfo.DisplayName,'MaritalStatus')
+            DisplayName: =DataSourceInfo([@'Tenant Onboarding List'],DataSourceInfo.DisplayName,'Marital Status')
             Fill: =RGBA(0, 0, 0, 0)
             Height: =70
-            MaxLength: =DataSourceInfo([@'Tenant Onboarding List'], DataSourceInfo.MaxLength, 'MaritalStatus')
+            MaxLength: =DataSourceInfo([@'Tenant Onboarding List'], DataSourceInfo.MaxLength, 'Marital Status')
             Required: =false
             Update: =DataCardValue7.Value
             Width: =266
@@ -648,10 +648,10 @@ Screen2 As screen:
             DataField: ="NumberofChildren"
             Default: =ThisItem.'Number of Children'
             DisplayMode: =Parent.DisplayMode
-            DisplayName: =DataSourceInfo([@'Tenant Onboarding List'],DataSourceInfo.DisplayName,'NumberofChildren')
+            DisplayName: =DataSourceInfo([@'Tenant Onboarding List'],DataSourceInfo.DisplayName,'Number of Children')
             Fill: =RGBA(0, 0, 0, 0)
             Height: =70
-            MaxLength: =DataSourceInfo([@'Tenant Onboarding List'], DataSourceInfo.MaxLength, 'NumberofChildren')
+            MaxLength: =DataSourceInfo([@'Tenant Onboarding List'], DataSourceInfo.MaxLength, 'Number of Children')
             Required: =false
             Update: =DataCardValue8.Value
             Width: =266
@@ -711,10 +711,10 @@ Screen2 As screen:
             DataField: ="DoyouhavepetsorIntendtohavepets"
             Default: =ThisItem.'Do you have pets or Intend to have pets'
             DisplayMode: =Parent.DisplayMode
-            DisplayName: =DataSourceInfo([@'Tenant Onboarding List'],DataSourceInfo.DisplayName,'DoyouhavepetsorIntendtohavepets')
+            DisplayName: =DataSourceInfo([@'Tenant Onboarding List'],DataSourceInfo.DisplayName,'Do you have pets or Intend to have pets')
             Fill: =RGBA(0, 0, 0, 0)
             Height: =70
-            MaxLength: =DataSourceInfo([@'Tenant Onboarding List'], DataSourceInfo.MaxLength, 'DoyouhavepetsorIntendtohavepets')
+            MaxLength: =DataSourceInfo([@'Tenant Onboarding List'], DataSourceInfo.MaxLength, 'Do you have pets or Intend to have pets')
             Required: =false
             Update: =DataCardValue9.Value
             Width: =266
@@ -774,10 +774,10 @@ Screen2 As screen:
             DataField: ="ReasonforLeaving"
             Default: =ThisItem.'Reason for Leaving'
             DisplayMode: =Parent.DisplayMode
-            DisplayName: =DataSourceInfo([@'Tenant Onboarding List'],DataSourceInfo.DisplayName,'ReasonforLeaving')
+            DisplayName: =DataSourceInfo([@'Tenant Onboarding List'],DataSourceInfo.DisplayName,'Reason for Leaving')
             Fill: =RGBA(0, 0, 0, 0)
             Height: =70
-            MaxLength: =DataSourceInfo([@'Tenant Onboarding List'], DataSourceInfo.MaxLength, 'ReasonforLeaving')
+            MaxLength: =DataSourceInfo([@'Tenant Onboarding List'], DataSourceInfo.MaxLength, 'Reason for Leaving')
             Required: =false
             Update: =DataCardValue10.Value
             Width: =266
