--- a/Tenant Onboarding Solution/Src/Attendance Screen.fx.yaml
+++ b/Tenant Onboarding Solution/Src/Attendance Screen.fx.yaml
@@ -498,7 +498,7 @@
                                 FontWeight: =FontWeight.Semibold
                                 Height: =Parent.Height
                                 Size: =9
-                                Text: =Text(ThisItem.'Date',"dd-mm-yyyy")
+                                Text: =Text(ThisItem.Date,"dd-mm-yyyy")
                                 ZIndex: =20
 
                             Label16_31 As label:
